@@ -1,5 +1,13 @@
 2008-04-02  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/file-actions.c: don't set a help-id on items in the
+	Open Recent menu.
+
+	* app/menus/file-menu.c (file_menu_setup): show a larger thumbnail
+	in the tooltips for recently used images.
+
+2008-04-02  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/help/Makefile.am
 	* plug-ins/help/gimphelpdomain.[ch]
 	* plug-ins/help/gimphelplocale.[ch]
